[package]
name = "rnssp-wasm"
version = "0.1.0"
authors = ["babit"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

# TODO: Clean up deps later
[dependencies]
wasm-bindgen = "0.2.84"
# rnssp = "0.1.0"
rnssp = { path = "../../rns-seed-predictor/rnssp", features = ["serde_support"] }
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
